--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,18 @@
-# Logs
-logs
-*.log
+# Ignorar node_modules
+node_modules/
+
+# Ignorar arquivos de build
+dist/
+build/
+
+# Ignorar configurações locais do sistema
+.DS_Store
+Thumbs.db
+
+# Ignorar logs e caches
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Ignorar variáveis de ambiente
+.env
